Fixed awkward spacing for header

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -123,8 +123,8 @@ header .intro-text .skills {
 }
 @media (min-width: 768px) {
   header .container {
-    padding-top: 150px;
-    padding-bottom: 75px;
+    padding-top: 200px;
+    padding-bottom: 100px;
   }
   header .intro-text .name {
     font-size: 5em;
